--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,12 @@
   <name>Maven Project</name>
   <description>Sample Maven project with a working, deployable site.</description>
   <url>http://www.example.com</url>
+         
+         <dependency>
+<groupId>org.sonarsource.scanner.maven</groupId>
+<artifactId>sonar-maven-plugin</artifactId>
+<version>3.4.0.905</version>
+</dependency>
 
   <properties>
     <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
